# optimized-dockerfiles

./: README.md
.github/: WORKFLOW.md
.github/workflows/: angular.yml  docker-build.yml  next.yml  react.yaml
angular/: .dockerignore  Dockerfile  Dockerfile.basic  README.md  package-lock.json  package.json
angular/src/app/: app.css
dotnet/aspnet-core/: Dockerfile  Dockerfile.basic  Program.cs  README.md
dotnet/aspnet-core/Controllers/: HelloController.cs
dotnet/blazor-server/: Dockerfile  Dockerfile.basic  Program.cs
dotnet/blazor-server/Components/: _Imports.razor
dotnet/blazor-server/wwwroot/: app.css
dotnet/grpc/: Dockerfile  Dockerfile.basic  GrpcDemo.csproj  Program.cs
dotnet/grpc/Protos/: greeter.proto
dotnet/minimal-api/: .dockerignore  Dockerfile  Dockerfile.basic  Program.cs
java/micronaut/: Dockerfile  Dockerfile.basic  README.md  pom.xml
java/quarkus/: Dockerfile  Dockerfile.basic  README.md  pom.xml
java/spring-boot/: .dockerignore  Dockerfile  Dockerfile.basic  README.md  pom.xml
java/vertx/: .dockerignore  Dockerfile  Dockerfile.basic  README.md  pom.xml
javascript/nextjs/: .dockerignore  Dockerfile.basic
nextjs/: Dockerfile  README.md  package-lock.json
nextjs/app/: layout.tsx  page.tsx
python/django/: .dockerignore  Dockerfile  Dockerfile.basic  README.md  pyproject.toml
python/django/src/api/: admin.py  models.py  serializers.py  urls.py  views.py
python/django/src/django_demo/: asgi.py  settings.py  urls.py  wsgi.py
python/fastapi/: Dockerfile
python/flask/: Dockerfile  Dockerfile.basic  README.md  pyproject.toml
python/flask/src/flask_demo/: __init__.py  wsgi.py
python/flask/src/flask_demo/api/: routes.py
python/flask/src/flask_demo/core/: config.py
python/flask/src/flask_demo/models/: user.py
python/streamlit/: .dockerignore  Dockerfile  Dockerfile.basic  README.md  pyproject.toml
python/streamlit/.streamlit/: config.toml
python/streamlit/src/streamlit_demo/: __init__.py  app.py
python/streamlit/src/streamlit_demo/pages/: 1_About.py  2_Health.py
python/streamlit/src/streamlit_demo/utils/: config.py
react/: .dockerignore  Dockerfile  README.md
ruby/grape/: Dockerfile  Dockerfile.basic  Gemfile  config.ru
ruby/grape/api/: hello_api.rb
ruby/hanami/: .dockerignore  Dockerfile  Dockerfile.basic  Gemfile  config.ru
ruby/rails/: .dockerignore  Dockerfile  Dockerfile.basic  Gemfile  README.md  config.ru
ruby/sinatra/: .dockerignore  Dockerfile  Dockerfile.basic  Gemfile  README.md  app.rb
(+52 files in other folders)
